[package]
name = "cronq"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3       
lto = true            
codegen-units = 1     
debug = false         
panic = "abort"       
strip = true          

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.98"
clap = { version = "4.5", features = ["derive"]}
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
url = "2.5.4"
cron = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
shell-words = "1.1"
